feat: add author details

--- a/src/pages/travel.mdx
+++ b/src/pages/travel.mdx
@@ -1,4 +1,4 @@
-# Projects
+# Travel
 <!--
 This page contains only content that has the tag **project**.
 
@@ -19,4 +19,4 @@ More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages
 ## Projects (any content with the "project" tag):
 -->
 
-<FeedItems filterByTags={['project']} />
+<FeedItems filterByTags={['travel']} />
