--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,6 +1,8 @@
 <AuthorBanner />
 
-Welcome to the Gatsby Starter Chronoblog! This starter will help you quickly launch a personal website using [Chronoblog Gatsby Theme](https://github.com/Chronoblog/gatsby-theme-chronoblog). Replace this text with your own here: `src/pages/index.mdx`
+**Hey there**, welcome to my Weblog! I’m a software engineer based in INDIA. These days I build 
+frontend UIs with JavaScript. A couple years ago it was Java. Here I post my notes, presentations, researches and experiences. 
+Basically, this is a web journal for my life journey, and anything that is important for me to document, finds a place here.
 
 ---
 
