feat: add projects, stories and social-stand pages

--- a/src/pages/social-stand.mdx
+++ b/src/pages/social-stand.mdx
@@ -1,11 +1,11 @@
-# Projects
+# Social-Stand
 <!--
-This page contains only content that has the tag **project**.
+This page contains only content that has the tag **stand and pledge**.
 
 This works thanks to this code:
 
 ```jsx
-<FeedItems filterByTags={['project']} />
+<FeedItems filterByTags={['stand']} />
 ```
 
 More about the `FeedItems` component in the docs: [gatsby-theme-chronoblog#feeditems-component](https://github.com/Chronoblog/gatsby-theme-chronoblog#feeditems-component)
@@ -17,13 +17,6 @@ If you do not need an extra page, just remove it from `src/pages/`, and remove l
 More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages](https://github.com/Chronoblog/gatsby-theme-chronoblog#pages)
 
 ## Projects (any content with the "project" tag):
-
-<FeedSearch />
-
-Paste this in src/gatsby-theme-chronoblog/site-header
-<Link to="/projects">Projects</Link>
-    <Link to="/travel">Travel</Link>
-    <Link to="/social-stand">Social-Stand</Link>
 -->
 
-<FeedItems filterByTags={['project']} />
+<FeedItems filterByTags={['stand','pledge']} />
