--- a/src/pages/stories.mdx
+++ b/src/pages/stories.mdx
@@ -1,11 +1,11 @@
-# Projects
+# Stories
 <!--
-This page contains only content that has the tag **project**.
+This page contains only content that has the tag **stories**.
 
 This works thanks to this code:
 
 ```jsx
-<FeedItems filterByTags={['project']} />
+<FeedItems filterByTags={['stories']} />
 ```
 
 More about the `FeedItems` component in the docs: [gatsby-theme-chronoblog#feeditems-component](https://github.com/Chronoblog/gatsby-theme-chronoblog#feeditems-component)
@@ -16,14 +16,7 @@ If you do not need an extra page, just remove it from `src/pages/`, and remove l
 
 More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages](https://github.com/Chronoblog/gatsby-theme-chronoblog#pages)
 
-## Projects (any content with the "project" tag):
-
-<FeedSearch />
-
-Paste this in src/gatsby-theme-chronoblog/site-header
-<Link to="/projects">Projects</Link>
-    <Link to="/travel">Travel</Link>
-    <Link to="/social-stand">Social-Stand</Link>
+## Projects (any content with the "stories" tag):
 -->
 
-<FeedItems filterByTags={['project']} />
+<FeedItems filterByTags={['stories']} />
