--- a/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,6 +1,7 @@
 <MenuMain>
   <MenuBlock>
     <Link to="/">Home</Link>
+    <Link to="/social-stand">Social-Stand</Link>
     <Link to="/stories">Stories</Link>
   </MenuBlock>
   <MenuBlock>
