--- a/src/pages/stand.mdx
+++ b/src/pages/stand.mdx
@@ -1,4 +1,4 @@
-# Social-Stand
+# Stand
 <!--
 This page contains only content that has the tag **stand and pledge**.
 
@@ -18,5 +18,16 @@ More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages
 
 ## Projects (any content with the "project" tag):
 -->
+
+
+As a society, we don't acknowledge our social-ills, and later, these gets manifested into major problems that we have today! 
+
+As an individual, I will do my best to stand for the cause while trying to address the societal issues around me with appropriate solutions, and strengthen the voice against it. 
+
+>
+Also, all the pledges that I take, I will be posting here, for my self-reminder and motivation to continue.
+>
+#pledge
+
 
 <FeedItems filterByTags={['stand','pledge']} />
