--- a/src/pages/stories.mdx
+++ b/src/pages/stories.mdx
@@ -19,4 +19,5 @@ More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages
 ## Projects (any content with the "stories" tag):
 -->
 
+A dedicated Page for Curated Stories and Excerpts from my favourite writers and novels. 
 <FeedItems filterByTags={['stories']} />
