--- a/src/pages/stories.mdx
+++ b/src/pages/stories.mdx
@@ -19,5 +19,5 @@ More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages
 ## Projects (any content with the "stories" tag):
 -->
 
-A dedicated Page for Curated Stories and Excerpts from my favourite writers and novels. 
+Considering all the negatives prevailing around, this is a dedicated Page for Curated positive Stories and Excerpts, some of my own creations and some from my favourite writers and novels. 
 <FeedItems filterByTags={['stories']} />
