--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,9 @@
 <AuthorBanner />
 
 **Hey there**, welcome to my weblog. I’m a software engineer based in INDIA. These days I build webapps with JavaScript. 
-A couple years ago it was Java. Here I post my notes, presentations, researches and experiences. 
+A couple years ago it was Java. 
+
+Here I post my notes, presentations, researches and experiences. 
 Basically, this is a web journal for my life journey, and anything that is important for me to document, finds a place here.
 
 ---
