--- a/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/src/gatsby-theme-chronoblog/site-header.mdx
@@ -7,6 +7,6 @@
   <MenuBlock>
     <SocialLinks />
     <span>&nbsp;&nbsp;</span>
-    <LightDarkSwitchButton darkLabel="🔅" lightLabel="☾" />
+    <LightDarkSwitchButton darkLabel="🔅" lightLabel="🌙" />
   </MenuBlock>
 </MenuMain>
