fix: style typos and avatar

--- a/src/pages/stand.mdx
+++ b/src/pages/stand.mdx
@@ -20,7 +20,7 @@ More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages
 -->
 
 
-As a society, we don't acknowledge our social-ills, and later, these gets manifested into major problems that we have today! 
+As a society, we don't acknowledge our societal-ills and later on, these gets manifested into major problems that we have today! 
 
 As an individual, I will do my best to stand for the cause while trying to address the societal issues around me with appropriate solutions, and strengthen the voice against it. 
 
