refactor: stand to plege

--- a/src/pages/pledge.mdx
+++ b/src/pages/pledge.mdx
@@ -25,7 +25,7 @@ As a society, we don't acknowledge our societal-ills and later on, these gets ma
 As an individual, I will do my best to stand for the cause while trying to address the societal issues around me with appropriate solutions, and strengthen the voice against it. 
 
 >
-Also, all the pledges that I take, I will be posting here, for my self-reminder and motivation to continue.
+All the pledges that I take, I will be posting here, for my self-reminder and motivation to continue.
 >
 #pledge
 
