style: fix author intro and other typo

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,6 +1,6 @@
 <AuthorBanner />
 
-**Hey there**, welcome to my weblog. I’m a software engineer based in INDIA. These days I build webapps with JavaScript. 
+**Hey there**, welcome to my weblog. I’m a restless software engineer, based in INDIA. I love learning and working on new technologies. These days I build webapps with JavaScript. 
 A couple years ago it was Java. 
 
 Here I post my notes, presentations, researches and experiences. 
