--- a/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,12 +1,14 @@
 <MenuMain>
   <MenuBlock>
     <Link to="/">Home</Link>
-    <Link to="/pledge">Pledge</Link>
+    <Link to="/vita"></Link>
+    <Link to="/projects">Projects</Link>
+    <Link to="/pledge"></Link>
     <Link to="/stories">Stories</Link>
   </MenuBlock>
   <MenuBlock>
     <SocialLinks />
     <span>&nbsp;&nbsp;</span>
-    <LightDarkSwitchButton darkLabel="☀️" lightLabel="🌙" />
+    <LightDarkSwitchButton darkLabel="light" lightLabel="dark" />
   </MenuBlock>
 </MenuMain>
