style: update story

--- a/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,7 +1,8 @@
 <MenuMain>
   <MenuBlock>
     <Link to="/">Home</Link>
-    <Link to="/stories">Stories</Link>
+    <Link to="/cv">Resume</Link>
+    <Link to="/story">Stories</Link>
   </MenuBlock>
   <MenuBlock>
     <SocialLinks />
