feat(post): add multi posts

--- a/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,7 +1,7 @@
 <MenuMain>
   <MenuBlock>
     <Link to="/">Home</Link>
-    <Link to="/cv">Resume</Link>
+    <Link to="/cv">Profile</Link>
     <Link to="/story">Stories</Link>
   </MenuBlock>
   <MenuBlock>
