--- a/src/pages/story.mdx
+++ b/src/pages/story.mdx
@@ -19,5 +19,5 @@ More about the additional site pages in the docs: [gatsby-theme-chronoblog#pages
 ## Projects (any content with the "stories" tag):
 -->
 
-Considering all the negativities prevailing around, this is a page for curated positive stories and excerpts, some of my own creations and some from my favourite writers and novels. 
+A page for curated positive stories and excerpts, some of my own creations and some from my favourite writers and novels. 
 <FeedItems filterByTags={['story']} />
