added aws cert and some minor corrections

--- a/src/pages/cv.mdx
+++ b/src/pages/cv.mdx
@@ -2,50 +2,55 @@
 
 #### Biography
 
-I'm currently working as a _software engineer_ at Atos, a French multinational information technology service and consulting company,
-a leading provider in hi-tech transactional services, unified communications, cloud, big data and cybersecurity services.
+I'm currently working as a _senior software engineer_ at TechMahindra, an Indian multinational information technology service and consulting company.
 
-I have worked on _Java Web Components, Java Core, Oracle WebLogic Application Server, WLST, Jython, Python, Oracle OSM & OSB, XML API, Oracle Database, Spring, Hibernate, Shell Scripting_ and have good exposure to _Cloud Technologies and Web Services_. 
+I have worked on _Java Web Components, Java Core, Oracle WebLogic Application Server, WLST, Jython, Python, Oracle OSM & OSB, XML API, Oracle Database, Spring, Hibernate, Shell Scripting_ and have good exposure to _Cloud Technologies and Web Services_.
 I am well-versed with Front-End and as well as Back-End Development, aspiring to become a Full-Stack Developer.
 
-My area of interest includes Web Development, Cloud, Java Script and Frameworks, Research Work on New Technologies, Blogging and Open Source Contributions. 
+My area of interest includes Web Development, Cloud, Java Script and its Frameworks, fiddling around upcoming Technologies, Blogging and Open Source Contributions.
 
 ---
 
 #### Education
 
 - Bachelor of Technology, 2016  
-  U.I.E.T. Kanpur University, Kanpur, Uttar Pradesh  
+  U.I.E.T. Kanpur University  
   _Computer Science_
 
-- Post-Graduation Diploma, 2017   
-  CDAC ACTS, Pune, Maharashtra  
-  _Advance Computing_  
+- Post-Graduation Diploma, 2017  
+  CDAC ACTS, Pune  
+  _Advance Computing_
 
 ---
 
 #### Professional Experience
 
-- March 2017 - Present  
-    _Software Engineer_ at AtoS, Pune, Maharashtra
+- April 2021 - Present  
+   _Senior Software Engineer_ at TechMahindra, Pune
+
+- March 2017 - April 2021  
+   _Software Engineer_ at AtoS, Pune
 
 ---
 
 #### Additional Experience and Certifications
 
-- 2013  
-  -  _Certificate in Java Programming Language using Java SE 6_  
-     Oracle
+- _Certificate in Java Programming Language using Java SE 6_, 2013  
+  Oracle
 
-- 2014
-  -  _Certified Ethical Hacking Expert CEHE Level 1.0_   
-     HBTI Kanpur
+- _Certified Ethical Hacking Expert CEHE Level 1.0_, 2014  
+  HBTI Kanpur
 
-- 2015
-  -  _Certified Professional Training in Linux System Administrator_  
-     CDAC Mohali, Chandigarh
-  -  _Certified Professional Training in Network Administrator_  
-     CDAC Mohali, Chandigarh
+- _Certified Professional Training in Linux System Administrator_, 2015  
+  CDAC Mohali, Chandigarh
 
+- _Certified Professional Training in Network Administrator_, 2015  
+  CDAC Mohali, Chandigarh
+
+- Certificate in Problem Solving, 2020  
+  HackerRank [_Verify Here_](https://www.hackerrank.com/certificates/5c0b095f1ebd)
+
+- Certified Cloud Practitioner, 2021    
+  AWS [_Verify Badge_](https://www.credly.com/badges/0be6d79a-034e-4a3e-ab04-9199af2d71a6)
 
 <FeedItems filterByTags={['certificate']} />
