--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,9 +1,9 @@
 <AuthorBanner />
 
-**Hey there**, welcome to my blog. I’m a software engineer, based in India. I love learning and working on new technologies. These days I build webapps with JavaScript, a couple years ago it was Java. 
+**Hey there**, welcome to my blog. I’m a software engineer, based in India. I love learning and working on new technologies. These days I build webapps with JavaScript, a couple years ago it was Java.
 
-Here I post my notes, presentations, researches and experiences. 
-Basically, this is a web journal for my professional journey, and things that are important to document, finds a place here.
+Here I post my notes, presentations, researches and experiences.
+Basically, this is a web journal for my professional journey, and things that are important to document, finds it's space here.
 
 ---
 
