refactor: updated the profile section and some minor updates

--- a/src/pages/cv.mdx
+++ b/src/pages/cv.mdx
@@ -2,9 +2,9 @@
 
 #### Biography
 
-I'm currently working as a _senior software engineer_ at TechMahindra, an Indian multinational information technology service and consulting company.
+I'm currently associated as *Senior Software Engineer with Wipro Limited*, an Indian multinational corporation that provides information technology, consulting and business process services.
 
-I have worked on _Java Web Components, Java Core, Oracle WebLogic Application Server, WLST, Jython, Python, Oracle OSM & OSB, XML API, Oracle Database, Spring, Hibernate, Shell Scripting_ and have good exposure to _Cloud Technologies and Web Services_.
+I have worked on Java Web Components, Java Core, Spring, SpringBoot, Rest Web Services, Java Persistence API, Spring Security, Shell Scripting, Oracle WebLogic Application Server, WLST, Oracle Database, and have good exposure to Cloud Technologies and Web Services.
 I am well-versed with Front-End and as well as Back-End Development, aspiring to become a Full-Stack Developer.
 
 My area of interest includes Web Development, Cloud, Java Script and its Frameworks, fiddling around upcoming Technologies, Blogging and Open Source Contributions.
@@ -25,11 +25,14 @@ My area of interest includes Web Development, Cloud, Java Script and its Framewo
 
 #### Professional Experience
 
-- April 2021 - Present  
-   _Senior Software Engineer_ at TechMahindra, Pune
+- May 2022 - Present
+   Senior Software Engineer at Wipro, Pune
+
+- April 2021 - May 2022  
+   Senior Software Engineer at TechMahindra, Pune
 
 - March 2017 - April 2021  
-   _Software Engineer_ at AtoS, Pune
+   Software Engineer at Atos, Pune
 
 ---
 
